results/SVCOMP/houdini/log-NullPointerException4-2024_03_19_00_39_09.txt
class A {
  //@ spec_public
  //@ invariant i < 1;
  //@ invariant i <= 1;
  //@ invariant i == 1;
  //@ invariant i != 1;
  //@ invariant i >= 1;
  //@ invariant i > 1;
  //@ invariant i < 0;
  //@ invariant i <= 0;
  //@ invariant i == 0;
  //@ invariant i != 0;
  //@ invariant i >= 0;
  //@ invariant i > 0;
  //@ invariant i < -1;
  //@ invariant i <= -1;
  //@ invariant i == -1;
  //@ invariant i != -1;
  //@ invariant i >= -1;
  //@ invariant i > -1;
  int i;
}

public class NullPointerException4 {
  //@ ensures \result;
  //@ ensures !\result;
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (Exception exc) {
      return false;
    }
    return true;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f();
  }
}


/home/max/Documents/JMLGPT/tmp/NullPointerException4.java:2: error: This JML modifier is not allowed for a invariant clause
  //@ spec_public
      ^
1 error

class A {
  //@ invariant i < 1;
  //@ invariant i <= 1;
  //@ invariant i == 1;
  //@ invariant i != 1;
  //@ invariant i >= 1;
  //@ invariant i > 1;
  //@ invariant i < 0;
  //@ invariant i <= 0;
  //@ invariant i == 0;
  //@ invariant i != 0;
  //@ invariant i >= 0;
  //@ invariant i > 0;
  //@ invariant i < -1;
  //@ invariant i <= -1;
  //@ invariant i == -1;
  //@ invariant i != -1;
  //@ invariant i >= -1;
  //@ invariant i > -1;
  int i;
}

public class NullPointerException4 {
  //@ ensures \result;
  //@ ensures !\result;
  public static boolean f() {
    A a = null;
    try {
      a.i = 0;
    } catch (Exception exc) {
      return false;
    }
    return true;
  }

  //@ requires \nonnullelements(args);
  public static void main(String[] args) {
    f();
  }
}


OpenJML not responding. Aborted.
